Moved themes into @coolui/application

--- a/packages/application/source/styles.css
+++ b/packages/application/source/styles.css
@@ -1,4 +1,4 @@
-@import '../../styles//source/index.css';
+@import '../../styles/source/index.css';
 
 @theme {
     --cool-header-bg: var(--color-body);
